# type-ahead

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  data.mk  debug.Dockerfile  deps.Dockerfile  dev.Dockerfile  dev2.Dockerfile  docker-compose.yml  lambda.Dockerfile  release.Dockerfile  sim.py
.github/workflows/: app_images.yml  data_image.yml  debug_image.yml  docker_image_for_main_builds.yml
app/: Cargo.toml
app/actix/: Cargo.toml
app/actix/src/: config.rs  db.rs  main.rs
app/data/: build.rs
app/data/src/: lib.rs
app/db/: Cargo.toml
app/db/src/: lib.rs
app/lambda/: Cargo.toml
app/lambda/src/: main.rs
data/: Dockerfile  Makefile  common.mk  fetch.mk  import.mk  import.sql
lambda_scaffolding/: Cargo.toml
lambda_scaffolding/src/: main.rs
src/: db.rs  main.rs
