[package]
name = "type_ahead_lambda"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
type_ahead_db = { path = "../db" }

lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
r2d2 = "0.8"
r2d2_sqlite = "0.21"
rusqlite = "0.28"
serde = { version = "1", features = ["derive"]}
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"